--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>ANA SAYFA</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
-<body class="ortala back-ground">
+<body class="ortala back-ground ">
     <h1 id="BaslikID">Müzik Dükkanım</h1>
     <nav id="navID">
         <ul id="listID">
-            <li><a href="HTML/Ana_sayfa.html">Ana Sayfa</a></li>
-            <li><a href="HTML/Urunlerimiz.html">Ürünlerimiz</a></li>
-            <li><a href="HTML/Hakkimizda.html">Hakkımızda</a></li>
+            <li><a href="Ana_sayfa.html">Ana Sayfa</a></li>
+            <li><a href="Urunlerimiz.html">Ürünlerimiz</a></li>
+            <li><a href="Hakkimizda.html">Hakkımızda</a></li>
         </ul>
     </nav>
-    <p> Müzik sitemize hoş geldiniz</p>
+    
+    <h2>Ana sayfa</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eius molestias, numquam rem minima nulla?</p>
+    <h3>Sitemizde Bulunan Müzik Aletleri</h3>
+    <ul id="aletID">
+        <li>Gitar</li>
+        <li>Davul</li>
+        <li>Piyano</li>
+        <li>Keman</li>
+    </ul>
 </body>
 </html>
 
